[project]
name = "misc_pub"
version = "0.1.0"
description = ""
authors = [
    {name = "distbit", email = "adp01@pm.me"},
]
dependencies = [
    "python-dotenv",
    "loguru",
    "PySnooper",
    "requests",
    "pandas>=3.0.2",
    "matplotlib>=3.10.8",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
